# I2P-Final

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
al_game/: CMakeLists.txt
al_game/include/: engine.hpp  rect.hpp  scene.hpp  vec2.hpp
al_game/src/: asset.cpp  asset.hpp  core.cpp  core.hpp  engine.cpp  error.cpp  error.hpp  log.cpp  log.hpp  text.cpp  text.hpp
src/: main.cpp
